--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "meanstack",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/katiestapleton/CS465MEANstack.git"
+  },
+  "author": "Katie Stapleton",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/katiestapleton/CS465MEANstack/issues"
+  },
+  "homepage": "https://github.com/katiestapleton/CS465MEANstack#readme",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
-  }
+    "nodemon": "^2.0.9"
+  },
+  "description": ""
 }
