--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ typings/
 # next.js build output
 .next
 
-# VS Code working files
+# VS code working files
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
