--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
+    "express-jwt": "^6.1.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "morgan": "~1.9.1",
     "node": "^16.4.0",
     "nodemon": "^2.0.10",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "seedgoose": "^2.0.2"
   },
